<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.AddStoryFragment">

    <ImageView
        android:id="@+id/iv_add_photo"
        android:layout_width="300dp"
        android:layout_height="250dp"
        android:layout_margin="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/add_image"
        tools:src="@tools:sample/avatars"/>

    <Button
        android:id="@+id/btn_add_camera"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:layout_marginHorizontal="8dp"
        android:text="@string/camera"
        android:background="@drawable/rounded_bg"
        app:layout_constraintStart_toStartOf="@+id/iv_add_photo"
        app:layout_constraintTop_toBottomOf="@id/iv_add_photo"
        app:layout_constraintEnd_toStartOf="@id/btn_add_gallery"/>

    <Button
        android:id="@+id/btn_add_gallery"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:layout_marginHorizontal="8dp"
        android:text="@string/gallery"
        android:background="@drawable/rounded_bg"
        app:layout_constraintEnd_toEndOf="@id/iv_add_photo"
        app:layout_constraintTop_toBottomOf="@id/iv_add_photo"
        app:layout_constraintStart_toEndOf="@id/btn_add_camera"/>

    <EditText
        android:id="@+id/ed_add_description"
        android:layout_width="300dp"
        android:layout_height="0dp"
        android:maxHeight="400dp"
        android:layout_marginTop="32dp"
        android:gravity="start"
        android:background="@drawable/semi_rounded_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_add_camera"
        app:layout_constraintBottom_toTopOf="@id/btn_add_upload"
        android:importantForAutofill="no"
        android:inputType="text"
        android:hint="@string/add_your_image_description"/>

    <Button
        android:id="@+id/btn_add_upload"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:layout_marginHorizontal="8dp"
        android:text="@string/upload"
        android:background="@drawable/rounded_bg"
        app:layout_constraintStart_toStartOf="@id/ed_add_description"
        app:layout_constraintEnd_toEndOf="@id/ed_add_description"
        app:layout_constraintTop_toBottomOf="@id/ed_add_description"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ProgressBar
        android:id="@+id/pb_add_progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>