<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:clipChildren="false"
    tools:context=".fragment.RegisterFragment">

    <com.sawelo.dicoding_story.ui.CustomEditText
        android:id="@+id/ed_register_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/ed_register_email"
        app:layout_constraintVertical_chainStyle="packed"
        android:autofillHints="name"
        android:hint="@string/name"/>

    <com.sawelo.dicoding_story.ui.CustomEditText
        android:id="@+id/ed_register_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintTop_toBottomOf="@id/ed_register_name"
        app:layout_constraintBottom_toTopOf="@id/ed_register_password"
        android:autofillHints="emailAddress"
        android:inputType="textEmailAddress"
        android:hint="@string/email_address"/>

    <com.sawelo.dicoding_story.ui.CustomEditText
        android:id="@+id/ed_register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintTop_toBottomOf="@+id/ed_register_email"
        app:layout_constraintBottom_toBottomOf="parent"
        android:autofillHints="password"
        android:inputType="textPassword"
        android:hint="@string/password"/>

    <Button
        android:id="@+id/btn_register_signUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/sign_up"
        android:background="@drawable/rounded_bg"
        app:layout_constraintTop_toBottomOf="@id/ed_register_password"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ProgressBar
        android:id="@+id/pb_register_progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>